src/objects/Transaction_Type_Step__mdt.object
<CustomObject>
    <fields>
        <fullName>Apex_Class_Name__c</fullName>
        <description>Class must implement the IStepNavigable interface.</description>
        <inlineHelpText>Class must implement the IStepNavigable interface.</inlineHelpText>
        <label>Apex Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Text_1__c</fullName>
        <label>Display Text 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Text_2__c</fullName>
        <label>Display Text 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Text_3__c</fullName>
        <label>Display Text 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Template_Name__c</fullName>
        <label>Document Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Text_1__c</fullName>
        <label>Header Text 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persist_FieldSet_1_Name__c</fullName>
        <label>Persist FieldSet 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_FieldSet_1_Name__c</fullName>
        <label>Query FieldSet 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <label>SObject Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Type__c</fullName>
        <label>Step Type</label>
        <picklist>
            <picklistValues>
                <fullName>VF Page</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Code</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>e.g. DS01</description>
        <inlineHelpText>e.g. DS01</inlineHelpText>
        <label>Transaction Type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visualforce_Page_Name__c</fullName>
        <label>Visualforce Page Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Transaction Type Step</label>
    <pluralLabel>Transaction Type Steps</pluralLabel>
</CustomObject>